--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=${VETAPP_DB_URL}
-spring.datasource.username=vet_app_user
+spring.datasource.url=${VETAPP_DB_URL}${VETAPP_DB_NAME}
+spring.datasource.username=${VETAPP_DB_USER}
 spring.datasource.password=${VETAPP_DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
