commt for Yusuf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,26 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
 logging.level,org.hibernate.SQL=DEBUG
+
+
+# jdbc:postgres://vet_app_render_user:xFni1R8tS6MPjlkmdBwMkMI3Qn9AzQ2l@dpg-cpcb2nsf7o1s738e4b4g-a.oregon-postgres.render.com/vet_app_render
+# url                username              password                               url devam                                      dbname
+# username : password @ url / dbname
+
+    # VETAPP_DB_PASS: postgresPassword
+    #   VETAPP_DB_URL: jdbc:postgresql://postgres:5432/
+    #   VETAPP_DB_NAME: vetapp
+    #   VETAPP_DB_USER: vet_app_user
+
+    # VETAPP_DB_PASS: xFni1R8tS6MPjlkmdBwMkMI3Qn9AzQ2l
+    #   VETAPP_DB_URL: jdbc:postgres://dpg-cpcb2nsf7o1s738e4b4g-a.oregon-postgres.render.com/
+    #   VETAPP_DB_NAME: vet_app_render
+    #   VETAPP_DB_USER: vet_app_render_user
+
+# postgres://vet_app_render_user:xFni1R8tS6MPjlkmdBwMkMI3Qn9AzQ2l@dpg-cpcb2nsf7o1s738e4b4g-a.oregon-postgres.render.com/vet_app_render
+
+
+# jdbc:postgresql://ep-crimson-poetry-a2atoe37.eu-central-1.pg.koyeb.app/
+# dbname=koyebdb
+# user=koyeb-adm
+# password=1bTNuHk5cIRY
